<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddNewFragment"
    android:background="@color/white">

    <Switch
        android:id="@+id/AssignedToNew"
        android:layout_width="177dp"
        android:layout_height="48dp"
        android:layout_gravity="start|top"
        android:layout_marginTop="16dp"
        android:showText="true"
        android:text="@string/assigned_to_me"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/IDNoNew"
        android:layout_width="84dp"
        android:layout_height="22dp"
        android:layout_gravity="start"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="#CFCFCF"
        android:text="@string/id_111232"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AssignedToNew"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MailFromNew"
        android:layout_width="211dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/mailfrom"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssignedToNew" />

    <TextView
        android:id="@+id/MailToNew"
        android:layout_width="211dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/mail_to"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/MailFromInputNew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MailFromInputNew"
        app:layout_constraintTop_toBottomOf="@+id/MailFromInputNew" />

    <EditText
        android:id="@+id/MailFromInputNew"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/MailFromNew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MailFromNew"
        app:layout_constraintTop_toBottomOf="@+id/MailFromNew"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/MailToInputNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/MailToNew"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="@+id/MailToNew"
        app:layout_constraintTop_toBottomOf="@+id/MailToNew"
        android:autofillHints="" />

    <EditText
        android:id="@+id/DateInputNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:minHeight="48dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/DateNew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/DateNew"
        app:layout_constraintTop_toBottomOf="@+id/DateNew"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/AddressInputNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/AddressNew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/AddressNew"
        app:layout_constraintTop_toBottomOf="@+id/AddressNew"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/DateNew"
        android:layout_width="211dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/due_date_for_shipping"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ShipTypeNew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ATypeNew"
        app:layout_constraintTop_toBottomOf="@+id/BTypeNew" />

    <RadioButton
        android:id="@+id/ATypeNew"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:text="@string/a_mail"
        app:layout_constraintStart_toStartOf="@+id/ShipTypeNew"
        app:layout_constraintTop_toBottomOf="@+id/ShipTypeNew" />

    <RadioButton
        android:id="@+id/BTypeNew"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:text="@string/b_mail"
        app:layout_constraintEnd_toStartOf="@+id/RTypeNew"
        app:layout_constraintStart_toEndOf="@+id/ATypeNew"
        app:layout_constraintTop_toBottomOf="@+id/ShipTypeNew" />

    <EditText
        android:id="@+id/WeightNew"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MailTypeNew"
        android:autofillHints="" />

    <RadioButton
        android:id="@+id/LetterTypeNew"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:text="@string/letter"
        app:layout_constraintEnd_toStartOf="@+id/PackageTypeNew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MailTypeNew"
        app:layout_constraintTop_toBottomOf="@+id/MailTypeNew" />

    <RadioButton
        android:id="@+id/PackageTypeNew"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:text="@string/packages"
        app:layout_constraintEnd_toStartOf="@+id/WeightNew"
        app:layout_constraintTop_toBottomOf="@+id/MailTypeNew" />

    <TextView
        android:id="@+id/MailTypeNew"
        android:layout_width="211dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/mail_type"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/MailToInputNew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MailToInputNew"
        app:layout_constraintTop_toBottomOf="@+id/MailToInputNew" />

    <RadioButton
        android:id="@+id/RTypeNew"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_marginEnd="44dp"
        android:text="@string/recommended"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShipTypeNew" />

    <TextView
        android:id="@+id/ShipTypeNew"
        android:layout_width="211dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/shipping_type"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/MailTypeNew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/MailTypeNew"
        app:layout_constraintTop_toBottomOf="@+id/PackageTypeNew" />

    <TextView
        android:id="@+id/AddressNew"
        android:layout_width="211dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/address"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/DateInputNew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/DateInputNew"
        app:layout_constraintTop_toBottomOf="@+id/DateInputNew" />

    <Button
        android:id="@+id/AddMailBtn"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/white"
        android:text="@string/add_mail"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>