<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pictures"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/TitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <EditText
        android:id="@+id/InputFullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_person_white"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/UsernameTxt"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleLogin"
        android:autofillHints="" />

    <EditText
        android:id="@+id/InputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_email_white"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/EmailTxt"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/InputFullname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/InputFullname"
        app:layout_constraintTop_toBottomOf="@+id/InputFullname"
        android:autofillHints="" />

    <EditText
        android:id="@+id/InputPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_phone_white"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/PhoneTxt"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/InputEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/InputEmail"
        app:layout_constraintTop_toBottomOf="@+id/InputEmail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/InputAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_add_location_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/AddressTxt"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/InputPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/InputPhone"
        app:layout_constraintTop_toBottomOf="@+id/InputPhone"
        android:autofillHints="" />

    <EditText
        android:id="@+id/InputZip"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/_3960"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="@+id/InputAddress"
        app:layout_constraintTop_toBottomOf="@+id/InputAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/InputLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/sierre"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/InputAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/InputZip"
        app:layout_constraintTop_toBottomOf="@+id/InputAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security_white"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/PasswordTxt"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/InputAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/InputAddress"
        app:layout_constraintTop_toBottomOf="@+id/InputAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/InputConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security_white"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/ConfirmPasswordTxt"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/InputPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/InputPassword"
        app:layout_constraintTop_toBottomOf="@+id/InputPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/btn_bg"
        android:onClick="Register"
        android:text="@string/create_my_account"
        app:layout_constraintEnd_toEndOf="@+id/InputConfirmPassword"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/InputConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/InputConfirmPassword" />

    <TextView
        android:id="@+id/AlreadyAccountTxt"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/LoginLinkBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/RegisterBtn"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBtn" />

    <TextView
        android:id="@+id/LoginLinkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/RegisterBtn"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>